applies fix for bug on Firefox mobile where content overflows to right of page, and footer does not stick to bottom

--- a/src/css/stylesheet.css
+++ b/src/css/stylesheet.css
@@ -62,6 +62,7 @@ html {
 */
 body {
     height: 100%;
+    max-width: 100%;
 }
 
 
@@ -125,6 +126,7 @@ body {
     .about__team {
         display: flex;
         flex-direction: row;
+        max-width: 100%;
     }
 
     .about__app {
